<resources>
    <string name="app_name">Eventastic</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_here">Create a new account ? SignUp</string>
    <string name="signup">SignUp</string>
    <string name="fullname">FullName</string>
    <string name="email">Email</string>
    <string name="loginhere">Already have an account ? Login here</string>
    <string name="welcome">Welcome !</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_your_event_here">Create Your Event Here !</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date e.g. 2022-01-25</string>
    <string name="event_time">Event Time e.g. 16:00:00</string>
    <string name="budget_rm">Budget(RM) e.g. 5000</string>
    <string name="create">CREATE</string>
    <string name="insert_your_event_details_here">Insert Your Event Details Here !</string>
    <string name="save_changes">Save Changes</string>
    <string name="title_activity_guest_crew">GuestCrew</string>
    <string name="tab_text_1">Guest</string>
    <string name="tab_text_2">Crew</string>
    <string name="guest">Guest</string>
    <string name="crew">Crew</string>
    <string name="crew_details">Crew Details</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="protocol">Protocol</string>
    <string name="media_publicity"><![CDATA[Media & Publicity]]></string>
    <string name="entertainment">Entertainment</string>
    <string name="security">Security</string>
    <string name="technical">Technical</string>
    <string name="others">Others</string>
    <string name="quantity">Quantity</string>
    <string name="invitation_sent">Invitation Sent</string>
    <string name="invitation_not_sent">Invitation Not Sent</string>
    <string name="confirm">Confirm</string>
    <string name="not_confirm">Not Confirm</string>
    <string name="guest_details">Guest Details</string>
    <string name="category">Category</string>
    <string name="adult">Adult</string>
    <string name="teen">Teen</string>
    <string name="children">Children</string>
    <string name="note">Note</string>
    <string name="progress">Progress</string>
    <string name="contact_details_optional">Contact Details (Optional)</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="title_activity_venue">venue</string>
    <string name="localhost">192.168.101.31</string>
    <string name="x">sdsds</string>

</resources>